# wanderwise-scraper-manager

./: main.py  pyproject.toml  test_main.http
config/: config.py  model_config.py
models/: article.py  city.py  scraper_setting.py
scrapers/v1/: detik_crime.py
